[package]
name = "acme-client"
version = "1.3.6"
authors = ["Hatter Jiang <jht5945@gmail.com>"]
edition = "2018"
description = "Acme auto challenge client, acme-client can issue certificates from Let's encrypt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
clap = "2.33"
rust_util = "0.6"
acme-lib = "0.9"
tide = "0.16"
async-std = { version = "1.8", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
deser-hjson = "2.2"
x509-parser = "0.9"
reqwest = { version = "0.11", features = ["blocking"] }
#reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
trust-dns-resolver = "0.23"
simpledateformat = "0.1.3"
serde_json = "1.0"
urlencoding = "2.1"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
aliyun-openapi-core-rust-sdk = "1.1.0"

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
#panic = 'abort'

[profile.dev]
split-debuginfo = "unpacked"
